--- a/3_pandas.ipynb
+++ b/3_pandas.ipynb
@@ -1980,9 +1980,581 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c4332059",
+   "metadata": {},
+   "source": [
+    "#  Reindexing and altering labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "108775cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "a    0.932094\n",
+       "b    0.222751\n",
+       "c    0.929905\n",
+       "d    0.529110\n",
+       "e    0.657767\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = pd.Series(np.random.rand(5),index = ['a','b','c','d','e'])\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "351f137e",
+   "metadata": {},
+   "source": [
+    "Reindexing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "c6673496",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "r         NaN\n",
+       "a    0.932094\n",
+       "g         NaN\n",
+       "h         NaN\n",
+       "a    0.932094\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.reindex(['r','a','g','h','a'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d62da3b7",
+   "metadata": {},
+   "source": [
+    "# astype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "e6ae88ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "A",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "B",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "C",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "08acf661-7c90-41ac-b31f-e6e5060c684e",
+       "rows": [
+        [
+         "0",
+         "0.1131539734882987",
+         "0.4482489031799889",
+         "0.8038017294573684"
+        ],
+        [
+         "1",
+         "0.6712633632961164",
+         "0.7260346698799125",
+         "0.07948824754279427"
+        ],
+        [
+         "2",
+         "0.8950875161796961",
+         "0.1184019810757867",
+         "0.4406459204023153"
+        ],
+        [
+         "3",
+         "0.7812095653922193",
+         "0.1449464758506488",
+         "0.2046410039985317"
+        ],
+        [
+         "4",
+         "0.10604810558546685",
+         "0.8470163107903845",
+         "0.14885203249874313"
+        ],
+        [
+         "5",
+         "0.9740283854555959",
+         "0.8894180435503412",
+         "0.9712218349775793"
+        ],
+        [
+         "6",
+         "0.025529704835371536",
+         "0.057170431450822345",
+         "0.008286353793063861"
+        ],
+        [
+         "7",
+         "0.41443167901618283",
+         "0.8569939330093191",
+         "0.2984426555610523"
+        ]
+       ],
+       "shape": {
+        "columns": 3,
+        "rows": 8
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.113154</td>\n",
+       "      <td>0.448249</td>\n",
+       "      <td>0.803802</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.671263</td>\n",
+       "      <td>0.726035</td>\n",
+       "      <td>0.079488</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.895088</td>\n",
+       "      <td>0.118402</td>\n",
+       "      <td>0.440646</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.781210</td>\n",
+       "      <td>0.144946</td>\n",
+       "      <td>0.204641</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.106048</td>\n",
+       "      <td>0.847016</td>\n",
+       "      <td>0.148852</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.974028</td>\n",
+       "      <td>0.889418</td>\n",
+       "      <td>0.971222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.025530</td>\n",
+       "      <td>0.057170</td>\n",
+       "      <td>0.008286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.414432</td>\n",
+       "      <td>0.856994</td>\n",
+       "      <td>0.298443</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          A         B         C\n",
+       "0  0.113154  0.448249  0.803802\n",
+       "1  0.671263  0.726035  0.079488\n",
+       "2  0.895088  0.118402  0.440646\n",
+       "3  0.781210  0.144946  0.204641\n",
+       "4  0.106048  0.847016  0.148852\n",
+       "5  0.974028  0.889418  0.971222\n",
+       "6  0.025530  0.057170  0.008286\n",
+       "7  0.414432  0.856994  0.298443"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2 = pd.DataFrame(np.random.rand(8,3),index = [ '0', '1', '2', '3', '4', '5', '6', '7'], columns = ['A','B','C'])\n",
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "b500e03f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A    float64\n",
+       "B    float64\n",
+       "C    float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cf4eb47",
+   "metadata": {},
+   "source": [
+    "To change the datatype into float into integer "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "f16ba72e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'one': a    1.63\n",
+       " b    2.96\n",
+       " c    3.90\n",
+       " d    4.00\n",
+       " dtype: float64,\n",
+       " 'two': a    5.8\n",
+       " b    6.7\n",
+       " c    7.1\n",
+       " d    8.4\n",
+       " dtype: float64}"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = {\n",
+    "    \"one\" : pd.Series([1.63, 2.96, 3.9, 4.0], index = ['a', 'b', 'c', 'd']),\n",
+    "    \"two\" : pd.Series([5.8, 6.7, 7.1, 8.4], index = ['a', 'b', 'c', 'd']),\n",
+    "}\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "454b2b30",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "one",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "two",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "517e5387-3e1d-4689-9e18-6e5653439318",
+       "rows": [
+        [
+         "a",
+         "1.63",
+         "5.8"
+        ],
+        [
+         "b",
+         "2.96",
+         "6.7"
+        ],
+        [
+         "c",
+         "3.9",
+         "7.1"
+        ],
+        [
+         "d",
+         "4.0",
+         "8.4"
+        ]
+       ],
+       "shape": {
+        "columns": 2,
+        "rows": 4
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>one</th>\n",
+       "      <th>two</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>1.63</td>\n",
+       "      <td>5.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>2.96</td>\n",
+       "      <td>6.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c</th>\n",
+       "      <td>3.90</td>\n",
+       "      <td>7.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>d</th>\n",
+       "      <td>4.00</td>\n",
+       "      <td>8.4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    one  two\n",
+       "a  1.63  5.8\n",
+       "b  2.96  6.7\n",
+       "c  3.90  7.1\n",
+       "d  4.00  8.4"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df4 = pd.DataFrame(d)\n",
+    "df4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "3b89a6e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "one",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "two",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "e5220398-f837-43f5-b84c-548ca1ae1986",
+       "rows": [
+        [
+         "a",
+         "1",
+         "5"
+        ],
+        [
+         "b",
+         "2",
+         "6"
+        ],
+        [
+         "c",
+         "3",
+         "7"
+        ],
+        [
+         "d",
+         "4",
+         "8"
+        ]
+       ],
+       "shape": {
+        "columns": 2,
+        "rows": 4
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>one</th>\n",
+       "      <th>two</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c</th>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>d</th>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   one  two\n",
+       "a    1    5\n",
+       "b    2    6\n",
+       "c    3    7\n",
+       "d    4    8"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datatype = df4.astype(int)\n",
+    "datatype"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "108775cc",
+   "id": "6cdcfead",
    "metadata": {},
    "outputs": [],
    "source": []
