--- a/7_pandas.ipynb
+++ b/7_pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "09a5b81f",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "1f7b8b78",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a4796a60",
    "metadata": {},
    "outputs": [
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "ae1eb6b4",
    "metadata": {},
    "outputs": [],
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "7dadb13c",
    "metadata": {},
    "outputs": [
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "38065375",
    "metadata": {},
    "outputs": [
@@ -948,9 +948,282 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5a413a72",
+   "metadata": {},
+   "source": [
+    "# Table Visualization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "15094a4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as  pd  \n",
+    "import numpy as np  \n",
+    "import matplotlib as mpl "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2b0291a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame({\n",
+    "    \"strings\": [\"Raghav\", \"Amit\"],\n",
+    "    \"ints\": [1, 3],\n",
+    "    \"floats\": [1.123, 1000.23]\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3dd797ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting Jinja2\n",
+      "  Downloading jinja2-3.1.6-py3-none-any.whl.metadata (2.9 kB)\n",
+      "Collecting MarkupSafe>=2.0 (from Jinja2)\n",
+      "  Downloading MarkupSafe-3.0.2-cp311-cp311-win_amd64.whl.metadata (4.1 kB)\n",
+      "Downloading jinja2-3.1.6-py3-none-any.whl (134 kB)\n",
+      "Downloading MarkupSafe-3.0.2-cp311-cp311-win_amd64.whl (15 kB)\n",
+      "Installing collected packages: MarkupSafe, Jinja2\n",
+      "Successfully installed Jinja2-3.1.6 MarkupSafe-3.0.2\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.0.1 -> 25.1.1\n",
+      "[notice] To update, run: C:\\Users\\ragha\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "</style>\n",
+       "<table id=\"T_6d749\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th class=\"blank level0\" >&nbsp;</th>\n",
+       "      <th id=\"T_6d749_level0_col0\" class=\"col_heading level0 col0\" >STRINGS</th>\n",
+       "      <th id=\"T_6d749_level0_col1\" class=\"col_heading level0 col1\" >INTS</th>\n",
+       "      <th id=\"T_6d749_level0_col2\" class=\"col_heading level0 col2\" >FLOATS</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th id=\"T_6d749_level0_row0\" class=\"row_heading level0 row0\" >row1</th>\n",
+       "      <td id=\"T_6d749_row0_col0\" class=\"data row0 col0\" >Raghav</td>\n",
+       "      <td id=\"T_6d749_row0_col1\" class=\"data row0 col1\" >1</td>\n",
+       "      <td id=\"T_6d749_row0_col2\" class=\"data row0 col2\" >1,123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_6d749_level0_row1\" class=\"row_heading level0 row1\" >row2</th>\n",
+       "      <td id=\"T_6d749_row1_col0\" class=\"data row1 col0\" >Amit</td>\n",
+       "      <td id=\"T_6d749_row1_col1\" class=\"data row1 col1\" >3</td>\n",
+       "      <td id=\"T_6d749_row1_col2\" class=\"data row1 col2\" >1. 000,230</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x20382c27410>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%pip install Jinja2\n",
+    "\n",
+    "df.style.format(precision=3, thousands='. ', decimal=',').format_index(str.upper,axis =1).relabel_index(['row1','row2'] , axis = 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5acf026",
+   "metadata": {},
+   "source": [
+    "# Hiding Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "bcbfad4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "</style>\n",
+       "<table id=\"T_c570f\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th class=\"blank level0\" >&nbsp;</th>\n",
+       "      <th id=\"T_c570f_level0_col1\" class=\"col_heading level0 col1\" >1</th>\n",
+       "      <th id=\"T_c570f_level0_col3\" class=\"col_heading level0 col3\" >3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th id=\"T_c570f_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_c570f_row1_col1\" class=\"data row1 col1\" >-1.636144</td>\n",
+       "      <td id=\"T_c570f_row1_col3\" class=\"data row1 col3\" >0.939828</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_c570f_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+       "      <td id=\"T_c570f_row3_col1\" class=\"data row3 col1\" >-0.529350</td>\n",
+       "      <td id=\"T_c570f_row3_col3\" class=\"data row3 col3\" >-0.226815</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x20382ca3010>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(np.random.randn(5, 5))\n",
+    "df.style \\\n",
+    "  .hide(subset=[0, 2, 4], axis=0) \\\n",
+    "  .hide(subset=[0, 2, 4], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66fb9a5e",
+   "metadata": {},
+   "source": [
+    "# Time series / date functionality"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2a15c494",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime  \n",
+    "dt = pd.to_datetime( [\"1/1/2025\", np.datetime64(\"2025-01-01\"), datetime.datetime(2025, 1, 1)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "1b4e5581",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['2025-01-01', '2025-01-01', '2025-01-01'], dtype='datetime64[ns]', freq=None)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4bcdb11c",
+   "metadata": {},
+   "source": [
+    "Generate sequences of fixed-frequency dates and time spans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "fcf8161b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dt = pd.date_range('2025-05-11',periods = 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "70abf2de",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['2025-05-11', '2025-05-12', '2025-05-13', '2025-05-14',\n",
+       "               '2025-05-15'],\n",
+       "              dtype='datetime64[ns]', freq='D')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "15cbf307",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0   2025-11-30\n",
+       "1   2025-12-31\n",
+       "2   2026-01-31\n",
+       "3   2026-02-28\n",
+       "4   2026-03-31\n",
+       "dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.Series(pd.date_range('11/05/2025',freq=\"ME\",periods=5))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15094a4f",
+   "id": "7d428b78",
    "metadata": {},
    "outputs": [],
    "source": []
